rm reset, fixed button wrap issue

--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,131 @@
-/*  REACT TV Styles */
- /* Variables */
-         :root {
-            --bg-color: rgb(82, 87, 90); /* gray */
-            --hi-light: rgb(212, 210, 216); /* off white */
-            --etch-red: rgb(212, 0, 0);
-            --bright-red: rgb(238, 0, 66); 
-            --gap: 15px;
-             --font-xs: 1em;
-            --font-sm: 1.5em;
-             --font-md: 2em;
-             --font-lg: 2.5em;
-             --font-xl: 3em;
-        }
-           
-        /* layout */
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            /* width: 100%;
-            height: 100%;  */
-            background: var(--bg-color); /* fallback for old browsers */
-            background: -webkit-linear-gradient(to top, rgb(255,255,255), rgb(212,210,216)); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to top, rgb(255,255,255), rgb(212, 210, 216)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-            background-repeat: no-repeat;
-            box-sizing: border-box;
-        }
-        
-        main {
-            flex: 1 0 auto;
-          }
-        
-       footer {
-            margin-top: 150px;
-        }
-        
-        /* Typography */
-        h1, h2 {
-            font-family: 'Fjalla One', Arial, sans-serif;
-        }
-        
-        h3, p {
-            font-family: Lato, Georgia, Times, "Times New Roman", serif;
-        }
-        
-        h1 {
-            font-size: var(--font-xl);
-            padding-bottom: var(--gap);
-            border-bottom: 2px solid #ee6e73;
-        }
-        
-        h2 {
-           font-size: var(--font-lg); 
-        }
-        
-        h3 {
-          font-size: var(--font-md);   
-        }
-        
-        p {
-            font-size: var(--font-sm); 
-        }
-        
-        
-        /* content */
-        .channel {
-            position: relative;
-            padding-top: 25px;
-            padding-bottom: 67.5%;
-            height: 0;
-        }
-        
-        .channel iframe {
-            box-sizing: border-box;
-            background: url(assets/images/etch-a-sketch.jpg) center center no-repeat;
-            background-size: contain;
-            padding: 11.9% 15.5% 14.8%;
-            position: absolute;
-            top: 50;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            margin-top: var(--gap);
-        }
-        
-        /* components */
-        .controls div {
-            /* positions the buttons inline */
-            display: inline;
-            margin: 0 var(--gap) var(--gap) 0;
-            max-width: 85%;
-        }
+/*-------------
+REACT TV Styles
+--------------*/
+
+
+ /*----------
+ Variables
+ ----------*/
+ :root {
+    --bg-color: rgb(82, 87, 90); /* gray */
+    --hi-light: rgb(212, 210, 216); /* off white */
+    --etch-red: rgb(212, 0, 0);
+    --bright-red: rgb(238, 0, 66);
+    --gap: 15px;
+    --font-xs: 1em;
+    --font-sm: 1.5em;
+    --font-md: 2em;
+    --font-lg: 2.5em;
+    --font-xl: 3em;
+}
+
+/*----------
+layout
+----------*/
+html,
+body {
+    margin: 0;
+    padding: 0;
+    /* width: 100%;
+    height: 100%;  */
+    background: var(--bg-color); /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, rgb(255,255,255), rgb(212,210,216)); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, rgb(255,255,255), rgb(212, 210, 216)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+}
+
+main {
+    flex: 1 0 auto;
+  }
+
+footer {
+    margin-top: 150px;
+}
+
+.page-footer {
+  background-color: #26a69a;
+}
+
+
+/*----------
+Typography
+----------*/
+h1, h2 {
+    font-family: 'Fjalla One', Arial, sans-serif;
+}
+
+h3, p {
+    font-family: Lato, Georgia, Times, "Times New Roman", serif;
+}
+
+h1 {
+    font-size: var(--font-xl);
+    padding-bottom: var(--gap);
+    border-bottom: 2px solid #ee6e73;
+}
+
+h2 {
+   font-size: var(--font-lg);
+}
+
+h3 {
+  font-size: var(--font-md);
+}
+
+p {
+    font-size: var(--font-sm);
+}
+
+.footer-copyright a {
+  color: #ee6e73;
+}
+
+.footer-copyright a:hover {
+  color: #ee6e73;
+  text-decoration: underline;
+}
+
+/*----------
+content
+----------*/
+.channel {
+    position: relative;
+    padding-top: 25px;
+    padding-bottom: 67.5%;
+    height: 0;
+}
+
+.channel iframe {
+    box-sizing: border-box;
+    background: url(assets/images/etch-a-sketch.jpg) center center no-repeat;
+    background-size: contain;
+    padding: 11.9% 15.5% 14.8%;
+    position: absolute;
+    top: 50;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: var(--gap);
+}
+
+/*----------
+components
+----------*/
+.controls div {
+/* positions the buttons inline */
+    display: inline;
+    margin: 0 var(--gap) var(--gap) 0;
+    max-width: 99%;
+}
+
+
+/*----------
+media queries
+----------*/
+@media screen and (max-width: 385px) {
+  /* scales buttons so they remain on one line */
+  .btn {
+    padding: 0 1rem;
+  }
+} /* end MQ */
